# picow_freertos_read_txt

./: CMakeLists.txt  FreeRTOSConfig.h  README.MD  lwipopts.h  main.c  msc_disk.c  tusb_config.h  wifi_setting.c  wifi_setting.h
